--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "error",
         "as-needed"
       ],
+      "object-shorthand": "error",
       "prefer-arrow-callback": "error",
       "strict": "error"
     }
