--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "error",
         "as-needed"
       ],
+      "guard-for-in": "error",
       "no-else-return": [
         "error",
         {
@@ -69,6 +70,7 @@
         }
       ],
       "no-lonely-if": "error",
+      "no-useless-escape": "error",
       "object-shorthand": "error",
       "prefer-arrow-callback": "error",
       "strict": "error"
